Motion planner, impostati valori supportati

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(3D-Printer-Firmware CXX)
 set(CMAKE_CXX_STANDARD 14)
 
 # Path della toolchain installata
-set(ARDUINO_CORE_PATH "C:/Users/redeg/AppData/Local/Arduino15/packages/arduino/hardware/avr/1.8.6")
+set(ARDUINO_CORE_PATH "C:/Users/Andrea/AppData/Local/Arduino15/packages/arduino/hardware/avr/1.8.6")
 
 include_directories(
         ${ARDUINO_CORE_PATH}/cores/arduino
         ${ARDUINO_CORE_PATH}/variants/standard
-        "C:/Users/redeg/AppData/Local/Arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino7/avr/include"
+        "C:/Users/Andrea/AppData/Local/Arduino15/packages/arduino/tools/avr-gcc/7.3.0-atmel3.6.1-arduino7/avr/include"
 )
 
 add_definitions(
@@ -24,4 +24,7 @@ file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
         "include/**/*.hpp"
 )
 
-add_executable(3D-Printer-Firmware ${SRC_FILES})
+add_executable(3D-Printer-Firmware ${SRC_FILES}
+        src/include/motion/MotionConfig.hpp
+        src/motion/MotionPlanner.cpp
+        src/include/motion/MotionPlanner.hpp)
