--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,36 @@ if (PLATFORM STREQUAL "ARDUINO")
     add_compile_definitions(ARDUINO=10805 F_CPU=16000000L ARDUINO_AVR_UNO __AVR__)
 
 elseif (PLATFORM STREQUAL "ESP32")
-    list(APPEND HAL_SOURCES "${CMAKE_SOURCE_DIR}/src/hal/esp32/ESP32HAL.cpp")
+    # ESP32 HAL source file - MUST be moved to correct location!
+    # Current location: src/hal/arduino/ESP32HAL.cpp (WRONG)
+    # Expected location: src/hal/esp32/ESP32HAL.cpp (CORRECT)
+
+    # Check if ESP32HAL.cpp exists in correct location
+    if (EXISTS "${CMAKE_SOURCE_DIR}/src/hal/esp32/ESP32HAL.cpp")
+        list(APPEND HAL_SOURCES "${CMAKE_SOURCE_DIR}/src/hal/esp32/ESP32HAL.cpp")
+        message(STATUS "ESP32HAL.cpp found in correct location")
+    elseif (EXISTS "${CMAKE_SOURCE_DIR}/src/hal/arduino/ESP32HAL.cpp")
+        list(APPEND HAL_SOURCES "${CMAKE_SOURCE_DIR}/src/hal/arduino/ESP32HAL.cpp")
+        message(WARNING "ESP32HAL.cpp found in WRONG location! Please move from src/hal/arduino/ to src/hal/esp32/")
+    else ()
+        message(FATAL_ERROR "ESP32HAL.cpp not found! Expected at src/hal/esp32/ESP32HAL.cpp")
+    endif ()
+
     set(HAL_INCLUDE "${CMAKE_SOURCE_DIR}/src/include/hal/esp32")
-    add_compile_definitions(ESP32 ARDUINO=10819 ARDUINO_ESP32_DEV ARDUINO_ARCH_ESP32)
+
+    # ESP32-specific definitions
+    add_compile_definitions(
+            PLATFORM_ESP32
+            ESP32
+            ARDUINO=10819
+            ARDUINO_ESP32_DEV
+            ARDUINO_ARCH_ESP32
+            CONFIG_FREERTOS_HZ=1000
+            ESP32_HAL_ENABLED
+    )
+
+    # ESP32-specific compiler flags
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -fno-rtti")
 
 elseif (PLATFORM STREQUAL "NATIVE")
     list(APPEND HAL_SOURCES "${CMAKE_SOURCE_DIR}/src/hal/native/NativeHAL.cpp")
@@ -80,6 +107,25 @@ if (PLATFORM STREQUAL "NATIVE")
     enable_testing()
     add_test(NAME BasicTest COMMAND 3dp_firmware_test)
 
+elseif (PLATFORM STREQUAL "ESP32")
+    # ESP32-specific configuration
+    if (EXISTS ${INO_FILE})
+        add_executable(3dp_firmware ${INO_FILE})
+    else ()
+        # fallback: crea un eseguibile vuoto che linka la libreria per consentire l'IDE di riconoscerla
+        add_executable(3dp_firmware EXCLUDE_FROM_ALL dummy.cpp)
+    endif ()
+
+    target_link_libraries(3dp_firmware
+            3dp_firmware_lib
+    )
+
+    # ESP32 specific linking flags
+    target_link_options(3dp_firmware PRIVATE
+            -Wl,--gc-sections
+            -Wl,-Map,${CMAKE_BINARY_DIR}/3dp_firmware.map
+    )
+
 else ()
     # Per piattaforme embedded: crea un 'executable' che punta allo sketch .ino (se presente)
     if (EXISTS ${INO_FILE})
@@ -108,3 +154,9 @@ install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/include/
         FILES_MATCHING PATTERN "*.hpp"
 )
 
+# Platform-specific install rules
+if (PLATFORM STREQUAL "ESP32")
+    install(FILES ${CMAKE_BINARY_DIR}/3dp_firmware.map
+            DESTINATION bin
+            OPTIONAL)
+endif ()
